--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>J.R.C. Prospero</title>
+    <link rel="shortcut icon" href="https://static.thenounproject.com/png/503925-200.png" type="https://static.thenounproject.com/png/503925-200.png">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
@@ -28,10 +29,10 @@
 
     <!-- HERO SECTION -->
     <section class="hero">
-        <h2>I do what it do, Yugi.</h2>
+        <h2><a href="https://www.youtube.com/watch?v=AUnPN385wLI">Web Designer</a></h2>
     </section>
     <section id="about-me" class="about-me">
-        <h1 class="about-me-title section-title">About Me</h1>
+        <h1 class="section-title">About Me</h1>
         <div class="about-me-body">
           <p>
             <img src="./assets/images/matthew lillard.jpg" alt="Profile Picture">
@@ -44,13 +45,13 @@
 
     </section>
     <section id="my-work" class="my-work">
-        <h1 class="section-title">Work</h1>
+        <h1 class="section-title work-title">Work</h1>
     <div class="work-grid-wrapper">
         <div class="work-grid-container work-grid-filler">
-            <div class="work-grid-item project-1" onclick='location.href="https://josephprospero.github.io/run-buddy/"'>
+            <div class="work-grid-item project-1 fill" onclick='location.href="https://josephprospero.github.io/run-buddy/"'>
                 <a href="https://josephprospero.github.io/run-buddy/">Run Buddy</a>
             </div>
-            <div class="work-grid-item project-2 fill">
+            <div class="work-grid-item project-2 fill" onclick='location.href="https://josephprospero.github.io/Joseph-Prospero-Portfolio/index.html"'>
                 <a href="https://josephprospero.github.io/Joseph-Prospero-Portfolio/index.html">Professional Portfolio</a>
             </div>
             <div class="work-grid-item project-3 fill">
