--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                 <li><a href="tel:+1(123)456-7890">☎️ Phone</a></li>
                 <li><a href="mailto:">📧 Email</a></li>
                 <li><a href="https://www.linkedin.com/in/barackobama">🤝🏻 LinkedIn</a></li>
+                <li><a href="https://github.com/josephprospero">🌐 GitHub</a></li>
                 <li><a href="https://www.instagram.com/elonmusk/">📸 Instagram</a></li>
                 <li><a href="https://twitter.com/dozedoff__">🍆 Twitter</a></li>
         </ul>
