--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <div class="work-grid-item project-2 fill" onclick='location.href="https://josephprospero.github.io/Joseph-Prospero-Portfolio/index.html"'>
                 <a href="https://josephprospero.github.io/Joseph-Prospero-Portfolio/index.html">Professional Portfolio</a>
             </div>
-            <div class="work-grid-item project-3 fill">
-                Project 3 (Coming Soon)
+            <div class="work-grid-item project-3 fill" onclick='location.href="https://davevebber.github.io/food-for-you/"'>
+                <a href="https://davevebber.github.io/food-for-you/">Food For You</a>
             </div>
             <div class="work-grid-item project-4 fill">
                 Project 4 (TBD)
