added bloc to projects

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             <div class="work-grid-item project-3 fill" onclick='location.href="https://davevebber.github.io/food-for-you/"'>
                 <a href="https://davevebber.github.io/food-for-you/">Food For You</a>
             </div>
-            <div class="work-grid-item project-4 fill">
-                Project 4 (TBD)
+            <div class="work-grid-item project-4 fill" onclick='location.href="https://the-bloc.herokuapp.com/"'>
+                <a href="https://the-bloc.herokuapp.com/">Bloc</a>
             </div>
             <div class="work-grid-item project-5 fill">
                 Project 5 (TBD)
